Added front page layout.

--- a/src/AvenueClothing.B2C/App_Config/Include/AvenueClothing.B2C.Sites.config
+++ b/src/AvenueClothing.B2C/App_Config/Include/AvenueClothing.B2C.Sites.config
@@ -1,7 +1,34 @@
 ﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
   <sitecore>
     <sites>
-      <site patch:before="*[@name='website']" name="avenueclothing" enableTracking="true" hostName="avenue-clothing.local" virtualFolder="/" physicalFolder="/" rootPath="/sitecore/content" startItem="/avenue clothing" database="web" domain="extranet" allowDebug="true" cacheHtml="true" htmlCacheSize="50MB" registryCacheSize="0" viewStateCacheSize="0" xslCacheSize="25MB" filteredItemsCacheSize="10MB" enablePreview="true" enableWebEdit="true" enableDebugger="true" disableClientData="false" cacheRenderingParameters="true" renderingParametersCacheSize="10MB" itemwebapi.mode="Off" itemwebapi.access="ReadOnly" itemwebapi.allowanonymousaccess="false" enableItemLanguageFallback="false" enableFieldLanguageFallback="false"/>
+      <site patch:before="*[@name='website']" 
+						name="avenueclothing" 
+						enableTracking="true" 
+						hostName="sc8" 
+						virtualFolder="/" 
+						physicalFolder="/" 
+						rootPath="/sitecore/content" 
+						startItem="/avenue clothing" 
+						database="master" 
+						domain="extranet" 
+						allowDebug="true" 
+						cacheHtml="true" 
+						htmlCacheSize="50MB" 
+						registryCacheSize="0" 
+						viewStateCacheSize="0" 
+						xslCacheSize="25MB" 
+						filteredItemsCacheSize="10MB" 
+						enablePreview="true" 
+						enableWebEdit="true" 
+						enableDebugger="true" 
+						disableClientData="false" 
+						cacheRenderingParameters="true" 
+						renderingParametersCacheSize="10MB" 
+						itemwebapi.mode="Off" 
+						itemwebapi.access="ReadOnly" 
+						itemwebapi.allowanonymousaccess="false" 
+						enableItemLanguageFallback="false" 
+						enableFieldLanguageFallback="false"/>
     </sites>
   </sitecore>
 </configuration>
