--- a/src/AvenueClothing.B2C/AvenueClothing.B2C.csproj
+++ b/src/AvenueClothing.B2C/AvenueClothing.B2C.csproj
@@ -115,13 +115,38 @@
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="UCommerce">
+      <HintPath>..\packages\uCommerce.Core.7.2.0.16251\lib\net400\UCommerce.dll</HintPath>
+    </Reference>
+    <Reference Include="UCommerce.Admin">
+      <HintPath>..\packages\uCommerce.Core.7.2.0.16251\lib\net400\UCommerce.Admin.dll</HintPath>
+    </Reference>
+    <Reference Include="UCommerce.Infrastructure">
+      <HintPath>..\packages\uCommerce.Core.7.2.0.16251\lib\net400\UCommerce.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="UCommerce.Installer">
+      <HintPath>..\packages\uCommerce.Core.7.2.0.16251\lib\net400\UCommerce.Installer.dll</HintPath>
+    </Reference>
+    <Reference Include="UCommerce.Pipelines">
+      <HintPath>..\packages\uCommerce.Core.7.2.0.16251\lib\net400\UCommerce.Pipelines.dll</HintPath>
+    </Reference>
+    <Reference Include="UCommerce.Presentation">
+      <HintPath>..\packages\uCommerce.Core.7.2.0.16251\lib\net400\UCommerce.Presentation.dll</HintPath>
+    </Reference>
+    <Reference Include="UCommerce.Transactions.Payments">
+      <HintPath>..\packages\uCommerce.Core.7.2.0.16251\lib\net400\UCommerce.Transactions.Payments.dll</HintPath>
+    </Reference>
+    <Reference Include="UCommerce.Web.Api">
+      <HintPath>..\packages\uCommerce.Core.7.2.0.16251\lib\net400\UCommerce.Web.Api.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
     <Content Include="App_Config\Include\AvenueClothing.B2C.Sites.config" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Layout.cshtml" />
-    <Content Include="Views\frontpage.cshtml" />
+    <Content Include="Views\Frontpage.cshtml" />
+    <Content Include="Views\PartialViews\CategoryNavigation.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -133,10 +158,16 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\CategoryNavigationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CategoryNavigationViewModel.cs" />
+    <Compile Include="ViewModels\CategoryViewModel.cs" />
+    <Compile Include="ViewModels\ProductViewModel.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Views\CategoryNavigation\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
