Serialization now works with unicorn and rainbow.

--- a/src/AvenueClothing.B2C/App_Config/Include/AvenueClothing.B2C.Sites.config
+++ b/src/AvenueClothing.B2C/App_Config/Include/AvenueClothing.B2C.Sites.config
@@ -8,7 +8,7 @@
 						virtualFolder="/" 
 						physicalFolder="/" 
 						rootPath="/sitecore/content" 
-						startItem="/avenue clothing" 
+						startItem="/AvenueClothing" 
 						database="master" 
 						domain="extranet" 
 						allowDebug="true" 
