--- a/src/AvenueClothing.B2C/packages.config
+++ b/src/AvenueClothing.B2C/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="bootstrap" version="4.0.0-alpha4" targetFramework="net461" />
   <package id="jQuery" version="3.0.0.1" targetFramework="net461" />
+  <package id="Kamsar.WebConsole" version="1.2.2.0" targetFramework="net461" />
+  <package id="MicroCHAP" version="1.2.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.0" targetFramework="net461" />
@@ -13,5 +15,11 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net461" />
+  <package id="Rainbow" version="1.3.1" targetFramework="net461" />
+  <package id="Rainbow.Core" version="1.3.1" targetFramework="net461" />
+  <package id="Rainbow.Storage.Sc" version="1.3.1" targetFramework="net461" />
+  <package id="Rainbow.Storage.Yaml" version="1.3.1" targetFramework="net461" />
   <package id="uCommerce.Core" version="7.2.0.16251" targetFramework="net461" />
+  <package id="Unicorn" version="3.2.0" targetFramework="net461" />
+  <package id="Unicorn.Core" version="3.2.0" targetFramework="net461" />
 </packages>
