--- a/src/project/AvenueClothing/serialization/Website.Content/content/AvenueClothing.yml
+++ b/src/project/AvenueClothing/serialization/Website.Content/content/AvenueClothing.yml
@@ -7,12 +7,35 @@ DB: master
 SharedFields:
 - ID: "4c9312a5-2e4e-42f8-ab6f-b8db8b82bf22"
   Hint: __Controller
-  Value: Home
+  Value: 
+- ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
+  Hint: __Renderings
+  Type: layout
+  Value: |
+    <r xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+      <d
+        id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}"
+        l="{970BBD5E-8D0F-4052-9A84-7F596840EB1C}">
+        <p
+          uid="{9F362F91-9641-4188-9DF5-F4491EC33BA6}"
+          key="main"
+          md="/sitecore/layout/Placeholder Settings/Commerce/Catalog" />
+      </d>
+      <d
+        id="{46D2F427-4CE5-4E1F-BA10-EF3636F43534}"
+        l="{970BBD5E-8D0F-4052-9A84-7F596840EB1C}" />
+    </r>
 Languages:
 - Language: en
   Versions:
   - Version: 1
     Fields:
+    - ID: "04bf00db-f5fb-41f7-8ab7-22408372a981"
+      Hint: __Final Renderings
+      Type: Layout
+      Value: |
+        <r xmlns:p="p" xmlns:s="s"
+          p:p="1" />
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
       Value: 20160923T085351Z
