--- a/src/AvenueClothing.B2C/App_Config/Include/AvenueClothing.B2C.Serialization.config
+++ b/src/AvenueClothing.B2C/App_Config/Include/AvenueClothing.B2C.Serialization.config
@@ -6,8 +6,11 @@
 					<targetDataStore physicalRootPath="$(sourceFolder)\project\AvenueClothing\serialization" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" useDataCache="false" singleInstance="true" />
 					<predicate type="Unicorn.Predicates.SerializationPresetPredicate, Unicorn" singleInstance="true">
 
-						<include name="Website.Content" database="master" path="/sitecore/content"/>
+						<include name="Avenue Clothing" database="master" path="/sitecore/content"/>
 						<include name="Templates" database="master" path="/sitecore/templates/User Defined"/>
+						<include name="Renderings" database="master" path="/sitecore/Layout/Renderings"/>
+						<include name="Layouts" database="master" path="/sitecore/Layout/Layouts"/>
+						<include name="Placeholder Settings" database="master" path="/sitecore/Layout/Placeholder Settings"/>
 						
 					</predicate>
 					<syncConfiguration type="Unicorn.Loader.DefaultSyncConfiguration, Unicorn" singleInstance="true" updateLinkDatabase="false" updateSearchIndex="true" maxConcurrency="1" />
