--- a/src/project/AvenueClothing/serialization/Placeholder Settings/Placeholder Settings/Commerce/Catalog/Category Navigation.yml
+++ b/src/project/AvenueClothing/serialization/Placeholder Settings/Placeholder Settings/Commerce/Catalog/Category Navigation.yml
@@ -11,7 +11,9 @@ SharedFields:
 - ID: "e391b526-d0c5-439d-803e-17512eae6222"
   Hint: Allowed Controls
   Type: TreelistEx
-  Value: "{749D4A8D-990A-4FFE-BE3A-C74591EBD862}"
+  Value: |
+    {749D4A8D-990A-4FFE-BE3A-C74591EBD862}
+    {878E2B49-315C-4EFE-8D26-52605F78C3D6}
 Languages:
 - Language: en
   Versions:
