Added missing items

--- a/src/AvenueClothing.B2C/App_Config/Include/AvenueClothing.B2C.Serialization.config
+++ b/src/AvenueClothing.B2C/App_Config/Include/AvenueClothing.B2C.Serialization.config
@@ -7,7 +7,7 @@
 					<predicate type="Unicorn.Predicates.SerializationPresetPredicate, Unicorn" singleInstance="true">
 
 						<include name="Avenue Clothing" database="master" path="/sitecore/content"/>
-						<include name="Templates" database="master" path="/sitecore/templates/User Defined"/>
+						<include name="Templates" database="master" path="/sitecore/templates/Common"/>
 						<include name="Renderings" database="master" path="/sitecore/Layout/Renderings"/>
 						<include name="Layouts" database="master" path="/sitecore/Layout/Layouts"/>
 						<include name="Placeholder Settings" database="master" path="/sitecore/Layout/Placeholder Settings"/>
