--- a/src/project/AvenueClothing/serialization/Templates/Common/Avenue Clothing/AvenueClothing/Frontpage.yml
+++ b/src/project/AvenueClothing/serialization/Templates/Common/Avenue Clothing/AvenueClothing/Frontpage.yml
@@ -1,8 +1,8 @@
 ﻿---
-ID: "655c8bd9-1f66-44ad-a397-fb7e04cca0d2"
-Parent: "2a2bfa8b-a976-4636-826d-62011070edf1"
-Template: "a87a00b1-e6db-45ab-8b54-636fec3b5523"
-Path: /sitecore/content/AvenueClothing/Data
+ID: "bde02538-463c-4018-848a-859ec83925dd"
+Parent: "9e886dc3-7d54-480b-8b64-b4207972533e"
+Template: "e269fbb5-3750-427a-9149-7aa950b49301"
+Path: /sitecore/templates/Common/Avenue Clothing/AvenueClothing/Frontpage
 DB: master
 Languages:
 - Language: en
@@ -11,7 +11,7 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20160927T072117Z
+      Value: 20160927T103120Z
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
       Value: sitecore\admin
