--- a/src/scripts/Serialization/App_Config/Include/AvenueClothing.B2C.Serialization.config
+++ b/src/scripts/Serialization/App_Config/Include/AvenueClothing.B2C.Serialization.config
@@ -11,6 +11,7 @@
 						<include name="Renderings" database="master" path="/sitecore/Layout/Renderings"/>
 						<include name="Layouts" database="master" path="/sitecore/Layout/Layouts"/>
 						<include name="Placeholder Settings" database="master" path="/sitecore/Layout/Placeholder Settings"/>
+						<include name="Images" database="master" path="/sitecore/media library/Images"/>
 						
 					</predicate>
 					<syncConfiguration type="Unicorn.Loader.DefaultSyncConfiguration, Unicorn" singleInstance="true" updateLinkDatabase="false" updateSearchIndex="true" maxConcurrency="1" />
