--- a/src/scripts/Serialization/App_Config/Include/AvenueClothing.B2C.Serialization.config
+++ b/src/scripts/Serialization/App_Config/Include/AvenueClothing.B2C.Serialization.config
@@ -8,6 +8,7 @@
 
 						<include name="Avenue Clothing" database="master" path="/sitecore/content"/>
 						<include name="Templates" database="master" path="/sitecore/templates/Common"/>
+						<include name="uCommerce Templates" database="master" path="/sitecore/templates/User Defined"/>
 						<include name="Renderings" database="master" path="/sitecore/Layout/Renderings"/>
 						<include name="Layouts" database="master" path="/sitecore/Layout/Layouts"/>
 						<include name="Placeholder Settings" database="master" path="/sitecore/Layout/Placeholder Settings"/>
