--- a/src/AvenueClothing.Foundation.UCommerceSync/AvenueClothing.Foundation.UCommerceSync.csproj
+++ b/src/AvenueClothing.Foundation.UCommerceSync/AvenueClothing.Foundation.UCommerceSync.csproj
@@ -92,7 +92,9 @@
     <Compile Include="Controllers\ImportUCommerceItemsController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="uCommerceSync\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
