--- a/src/project/AvenueClothing/serialization/uCommerce Templates/User Defined/uCommerce definitions/Default Category Definition/__Standard Values.yml
+++ b/src/project/AvenueClothing/serialization/uCommerce Templates/User Defined/uCommerce definitions/Default Category Definition/__Standard Values.yml
@@ -8,6 +8,15 @@ SharedFields:
 - ID: "d3ae7222-425d-4b77-95d8-ee33ac2b6730"
   Hint: __Context Menu
   Value: "{D09D126F-A9A0-4744-BE3C-A97143D8CFEF}"
+- ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
+  Hint: __Renderings
+  Type: layout
+  Value: |
+    <r xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+      <d
+        id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}"
+        l="{55AD3180-3D79-461F-AC6F-D679AB58A849}" />
+    </r>
 Languages:
 - Language: en
   Versions:
