--- a/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
+++ b/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Controllers\MiniBasketController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\AddToBasketButtonViewModel.cs" />
+    <Compile Include="ViewModels\MiniBasketViewModel.cs" />
     <Compile Include="ViewModels\ValidateProductExistsViewModel.cs" />
     <Compile Include="ViewModels\AddToBasketViewModel.cs" />
   </ItemGroup>
@@ -135,6 +136,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Product\AddToBasketButton.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\MiniBasket\MiniBasket.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
