Highlighted products catalog on front page - initial version

--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing.yml
@@ -27,6 +27,10 @@ SharedFields:
           id="{DFCC28D2-F51F-46BC-9FF4-B4945FE2B05E}"
           ph="main"
           uid="{488D87DD-F566-4C06-AF19-0A052F93340F}" />
+        <r
+          id="{C2C719BA-28FC-423B-9D66-F5E413D5E0F2}"
+          ph="main"
+          uid="{8023DBAC-7935-41FB-92AB-F64659757E9C}" />
       </d>
     </r>
 Languages:
