Updated the 'highlighted products catalog' to take items from a multi product picker instead. For now it only Displays the selected item IDs until the product list renderer is complete.

--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing.yml
@@ -28,9 +28,9 @@ SharedFields:
           ph="main"
           uid="{488D87DD-F566-4C06-AF19-0A052F93340F}" />
         <r
-          id="{C2C719BA-28FC-423B-9D66-F5E413D5E0F2}"
+          id="{74D43CB5-4D7A-470F-A042-8954F2B5A75B}"
           ph="main"
-          uid="{8023DBAC-7935-41FB-92AB-F64659757E9C}" />
+          uid="{24471DBA-9114-46FD-9406-0A671E698CE4}" />
       </d>
     </r>
 Languages:
@@ -47,7 +47,7 @@ Languages:
           <d
             id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}">
             <r
-              uid="{5D624C1B-B44E-4A87-B107-F3FFF4A0FD6F}">
+              uid="{8023DBAC-7935-41FB-92AB-F64659757E9C}">
               <p:d />
             </r>
             <r
@@ -64,12 +64,20 @@ Languages:
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
       Value: sitecore\admin
+    - ID: "9336b4dd-e895-4a97-a252-5ebf3776b8a1"
+      Hint: Products
+      Type: Treelist
+      Value: |
+        {32BA0386-A3AF-43F5-9AB7-43AE41F8480B}
+        {C4EE838A-6101-47B0-90D5-30278181AB0B}
+        {4B001349-BDAB-4E9F-8E15-47DBC0F4970A}
     - ID: "b9baaa2b-d947-4cae-97cf-4e413b57c511"
       Hint: Images
       Type: Multilist
       Value: |
         {1B0CDD3C-E5DD-4BB8-95A7-3CAAC820E201}
         {8E3609EE-7C0B-4D09-B9AD-88B0C1DF359F}
+        {00470A0E-9DE1-47D2-8A5C-D42F7021CCEB}
     - ID: "ed7ce68d-170d-4857-ba66-911025f349e2"
       Hint: Title
       Value: Welcome to Avenue
