Product details component - initial version Added a check, so empty categories don't throw an error

--- a/src/AvenueClothing.Feature.Catalog.Module/AvenueClothing.Feature.Catalog.Module.csproj
+++ b/src/AvenueClothing.Feature.Catalog.Module/AvenueClothing.Feature.Catalog.Module.csproj
@@ -185,6 +185,9 @@
   <ItemGroup>
     <Content Include="Views\ProductList.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ProductDetails.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
