Created separate lists for Sitecore and UCommerce breadcrumbs.

--- a/src/AvenueClothing.Feature.General.Module/AvenueClothing.Feature.General.Module.csproj
+++ b/src/AvenueClothing.Feature.General.Module/AvenueClothing.Feature.General.Module.csproj
@@ -159,6 +159,7 @@
     <Compile Include="ViewModels\BreadcrumbViewModel.cs" />
     <Compile Include="ViewModels\BreadcrumbViewModelList.cs" />
     <Compile Include="ViewModels\BreadcrumbViewModelUcommerce.cs" />
+    <Compile Include="ViewModels\BreadcrumbWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
